/**
 * @property 
 * interfaz de objeto a buscar
 */
export interface objetoBusqueda {
    titulo?:string;
    fecha?:number;
}
